[package]
name = "comp_state_seed_extras"
version = "0.0.8"
authors = ["rebo <rebotfc@gmail.com>"]
edition = "2018"
description = "helpers for seed"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
comp_state = "0.2.1"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[dependencies.web-sys]
version = "0.3.35"
features = [
  'HtmlElement',
]